[package]
name = "docker-tags"
version = "0.1.0"
edition = "2021"
authors = ["miyake13000"]
description = "docker tags"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo"] }
indicatif = "0.17"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
