[package]
name = "docker-tags"
version = "0.2.0"
edition = "2021"
authors = ["miyake13000"]
description = "Print all tags of a image"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo"] }
futures = "0.3"
indicatif = "0.17"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
